Don't require config for the forwarding dispatcher Allow to use arbitrary master sources in a mix & match fashion
Some refactoring